--- a/style.css
+++ b/style.css
@@ -83,10 +83,18 @@ body {
   }
   
   #progress-container {
-    padding-bottom: 1em;
+    /* padding-bottom: 1em; */
     cursor: pointer;
   }
   
   .button-active {
     color: rgb(0, 183, 107);
+  }
+
+  #time-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: smaller;
+    margin-top: 0.5em;
   }
